Use Java 17 String formatting